infra/k8s/api/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: app
  annotations:
    configmap.reloader.stakater.com/reload: maesoongan-api-config
    secret.reloader.stakater.com/reload: auth-service-secret
  labels:
    app: auth-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"

      labels:
        app: auth-service
    spec:
      nodeSelector:
        role: service
      containers:
        - name: auth-service
          image: 295234319852.dkr.ecr.ap-northeast-2.amazonaws.com/maesoongan/auth-service:7ae44fa96a7b545d4754db528c6f6ef8bda13f71
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: app
  labels:
    app: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
