infra/k8s/api/contest-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contest-service
  namespace: app
  annotations:
    configmap.reloader.stakater.com/reload: maesoongan-api-config
    secret.reloader.stakater.com/reload: contest-service-secret
  labels:
    app: contest-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: contest-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8082"
      labels:
        app: contest-service
    spec:
      nodeSelector:
        role: service
      containers:
        - name: contest-service
          image: 295234319852.dkr.ecr.ap-northeast-2.amazonaws.com/maesoongan/contest-service:ac8bae683b39bc8cda25c0fb8fa2a4d14f40ed5f
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: contest-service
  namespace: app
  labels:
    app: contest-service
spec:
  type: ClusterIP
  selector:
    app: contest-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
