infra/k8s/api/market-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-service
  namespace: app
  annotations:
    configmap.reloader.stakater.com/reload: maesoongan-api-config
    secret.reloader.stakater.com/reload: market-service-secret
  labels:
    app: market-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: market-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8085"
      labels:
        app: market-service
    spec:
      nodeSelector:
        role: service
      containers:
        - name: market-service
          image: 295234319852.dkr.ecr.ap-northeast-2.amazonaws.com/maesoongan/market-service:3d7e759566ed002c50b012b0937e482806443290
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8085
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: market-service
  namespace: app
  labels:
    app: market-service
spec:
  type: ClusterIP
  selector:
    app: market-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
