infra/k8s/api/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: app
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      nodeSelector:
        role: service
      containers:
        - name: order-service
          image: 295234319852.dkr.ecr.ap-northeast-2.amazonaws.com/maesoongan/order-service:c7c0e948e11b63e853a94648b7f45ac48c4fa9de
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8084
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: app
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
